<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/bghome">

    <LinearLayout
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/rangkuman"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pemasukan: "
                android:textColor="@color/LightGrey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_pemasukan_bulan_ini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/LightGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jdl_pengeluaran"
                android:textColor="@color/LightPink"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_pengeluaran_bulan_ini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/LightPink" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul">
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="330dp"
                    android:layout_height="230dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        tools:layout_editor_absoluteX="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/pemasukan_icon"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="Tambah Pemasukan"
                    android:src="@drawable/income" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pemasukan"
                    android:textColor="@color/Gray"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/pengeluaran_icon"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="Tambah Pengeluaran"
                    android:src="@drawable/spend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pengeluaran"
                    android:textColor="@color/Gray"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/detail_cash_flow_icon"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="Detail Flow"
                    android:src="@drawable/flow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/detailflow"
                    android:textColor="@color/Gray"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/pengaturan_icon"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="Pengaturan"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pengaturan"
                    android:textColor="@color/Gray"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <!--  Chart  -->



</androidx.constraintlayout.widget.ConstraintLayout>